gac_sb/objects/INNOvalo__c.object
<CustomObject>
    <fields>
        <fullName>Option_retenue_veille__c</fullName>
        <label>Option retenue veilles</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_controle__c</fullName>
        <label>Phase du contrôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contrôle sur pièces</fullName>
                </value>
                <value>
                    <fullName>Contrôle sur place</fullName>
                </value>
                <value>
                    <fullName>Procédure de rectification</fullName>
                </value>
                <value>
                    <fullName>Phase contentieuse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portee_controle__c</fullName>
        <label>Portée du contrôle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligibilité</fullName>
                </value>
                <value>
                    <fullName>Valorisation comptable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redressement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redressement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remboursement_demande__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remboursement demandé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resultat_NET__c</fullName>
        <label>Résultat NET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secteur_activite_1__c</fullName>
        <label>Secteur d&apos;activité 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secteur_activite_2__c</fullName>
        <label>Secteur d&apos;activité 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secteur_activite_3__c</fullName>
        <label>Secteur d&apos;activité 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Societe_agreee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Société agréée</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_CIR_apres_dedu__c</fullName>
        <label>TECH - CIR après dédu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TECH_CIR_avantDedu__c</fullName>
        <description>Pour alimenter Planification de facturation</description>
        <label>TECH - CIR avant dédu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taux__c</fullName>
        <label>Taux</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TechMissionIdINNOV1__c</fullName>
        <externalId>true</externalId>
        <label>Tech Mission Id INNO V1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechPhaseReprise__c</fullName>
        <description>Champ technique pour la reprise de Inno v2
Permet d&apos;alimenter correctement la phase au niveau de la mission</description>
        <label>Tech Phase reprise</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temps_theorique_mission__c</fullName>
        <label>Temps théorique initial</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_option1__c</fullName>
        <label>Total amortissements brevets option 1</label>
        <summarizedField>INNOamortissement__c.Montant_RD_retenu_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements de brevets</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOamortissement__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_option2__c</fullName>
        <label>Total amortissements brevets option 2</label>
        <summarizedField>INNOamortissement__c.Montant_RD_retenu_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements de brevets</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOamortissement__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_option3__c</fullName>
        <label>Total amortissements brevets option 3</label>
        <summarizedField>INNOamortissement__c.Montant_RD_retenu_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements de brevets</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOamortissement__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissementBrevet_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_amortissementBrevet__c,1,Total_amortissementBrevet_option1__c,2,Total_amortissementBrevet_option2__c,3,Total_amortissementBrevet_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total amo. brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_option1__c</fullName>
        <label>Total amortissements option 1</label>
        <summarizedField>INNOamortissement__c.Montant_RD_retenu_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOamortissement__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_option2__c</fullName>
        <label>Total amortissements option 1</label>
        <summarizedField>INNOamortissement__c.Montant_RD_retenu_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOamortissement__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_option3__c</fullName>
        <label>Total amortissements option 3</label>
        <summarizedField>INNOamortissement__c.Montant_RD_retenu_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOamortissement__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dotations aux amortissements</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOamortissement__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_amortissement_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_amortissement__c,1,Total_amortissement_option1__c,2,Total_amortissement_option2__c,3,Total_amortissement_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total amortissements option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_option1__c</fullName>
        <label>Total avances remboursables option 1</label>
        <summarizedField>INNOsubvention__c.Montant_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Avances remboursables</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_option2__c</fullName>
        <label>Total avances remboursables option 2</label>
        <summarizedField>INNOsubvention__c.Montant_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Avances remboursables</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_option3__c</fullName>
        <label>Total avances remboursables option 3</label>
        <summarizedField>INNOsubvention__c.Montant_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOsubvention__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Avances remboursables</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOsubvention__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_avanceRemboursable_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_avanceRemboursable__c,1,Total_avanceRemboursable_option1__c,2,Total_avanceRemboursable_option2__c,3,Total_avanceRemboursable_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total avances remb. option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_option1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total assurances de brevets option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_option2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total assurances de brevets option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_option3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total assurances de brevets option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetAssu_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_brevetAssu__c,1,Total_brevetAssu_option1__c,2,Total_brevetAssu_option2__c,3,Total_brevetAssu_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total assu. de brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_option1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total défenses de brevets option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_option2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total défenses de brevets option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_option3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total défenses de brevets option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetDef_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_brevetDef__c,1,Total_brevetDef_option1__c,2,Total_brevetDef_option2__c,3,Total_brevetDef_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total défenses de brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_facture_option1__c</fullName>
        <label>Total PM brevets facture option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_facture_option2__c</fullName>
        <label>Total PM brevets facture option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_facture_option3__c</fullName>
        <label>Total PM brevets facture option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_option1__c</fullName>
        <formula>Total_brevetPM_facture_option1__c + Total_brevetPM_personnel_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_option2__c</fullName>
        <formula>Total_brevetPM_facture_option2__c + Total_brevetPM_personnel_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_option3__c</fullName>
        <formula>Total_brevetPM_facture_option3__c + Total_brevetPM_personnel_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_brevetPM__c,1,Total_brevetPM_option1__c,2,Total_brevetPM_option2__c,3,Total_brevetPM_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PM brevets option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_personnel_option1__c</fullName>
        <label>Total PM brevets personnel option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_brevetPM_retenu_option1__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_personnel_option2__c</fullName>
        <label>Total PM brevets personnel option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_brevetPM_retenu_option2__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_brevetPM_personnel_option3__c</fullName>
        <label>Total PM brevets personnel option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_brevetPM_retenu_option3__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_option1__c</fullName>
        <formula>IF( MissionCIR__r.Annee_CIR__c = &apos;2009&apos; || MissionCIR__r.Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_option1__c + Total_miseDisposition_option1__c ) * 0.75) +  Total_jeuneDocteur_option1__c ,

((Total_salarie_option1__c + Total_miseDisposition_option1__c ) * 0.5) +
 Total_jeuneDocteur_option1__c +
 (Total_amortissement_option1__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonctionnement option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_option2__c</fullName>
        <formula>IF( MissionCIR__r.Annee_CIR__c = &apos;2009&apos; || MissionCIR__r.Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_option2__c + Total_miseDisposition_option2__c ) * 0.75) +  Total_jeuneDocteur_option2__c ,

((Total_salarie_option2__c + Total_miseDisposition_option2__c ) * 0.5) +
 Total_jeuneDocteur_option2__c +
 (Total_amortissement_option2__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonctionnement option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_option3__c</fullName>
        <formula>IF( MissionCIR__r.Annee_CIR__c = &apos;2009&apos; || MissionCIR__r.Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_option3__c + Total_miseDisposition_option3__c ) * 0.75) +  Total_jeuneDocteur_option3__c ,

((Total_salarie_option3__c + Total_miseDisposition_option3__c ) * 0.5) +
 Total_jeuneDocteur_option3__c +
 (Total_amortissement_option3__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonctionnement option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_frais_fonctionnement_optionFinale__c</fullName>
        <formula>IF( MissionCIR__r.Annee_CIR__c = &apos;2009&apos; || MissionCIR__r.Annee_CIR__c = &apos;2010&apos;, 
((Total_salarie_optionFinale__c + Total_miseDisposition_optionFinale__c) * 0.75) + Total_jeuneDocteur_optionFinale__c,
((Total_salarie_optionFinale__c + Total_miseDisposition_optionFinale__c) * 0.5) +
Total_jeuneDocteur_optionFinale__c +
(Total_amortissement_optionFinale__c * 0.75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total frais de fonct. option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_heures_RD_option1__c</fullName>
        <label>Total heures R&amp;D option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Heures_RD_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.Actif__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.UniteTempsDepensesPersonnel__c</field>
            <operation>equals</operation>
            <value>Heures</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_heures_RD_option2__c</fullName>
        <label>Total heures R&amp;D option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Heures_RD_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.Actif__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.UniteTempsDepensesPersonnel__c</field>
            <operation>equals</operation>
            <value>Heures</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_heures_RD_option3__c</fullName>
        <label>Total heures R&amp;D option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Heures_RD_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.Actif__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.UniteTempsDepensesPersonnel__c</field>
            <operation>equals</operation>
            <value>Heures</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_option1__c</fullName>
        <label>Total jeunes docteurs option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Jeunes docteurs</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_option2__c</fullName>
        <label>Total jeunes docteurs option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Jeunes docteurs</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_option3__c</fullName>
        <label>Total jeunes docteurs option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Jeunes docteurs</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_jeuneDocteur_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_jeuneDocteur__c,1,Total_jeuneDocteur_option1__c,2,Total_jeuneDocteur_option2__c,3,Total_jeuneDocteur_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total jeunes docteurs option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_jours_RD_option1__c</fullName>
        <label>Total jours R&amp;D option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Heures_RD_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.Actif__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.UniteTempsDepensesPersonnel__c</field>
            <operation>equals</operation>
            <value>Jours</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_jours_RD_option2__c</fullName>
        <label>Total jours R&amp;D option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Heures_RD_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.Actif__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.UniteTempsDepensesPersonnel__c</field>
            <operation>equals</operation>
            <value>Jours</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_jours_RD_option3__c</fullName>
        <label>Total jours R&amp;D option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Heures_RD_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.Actif__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.UniteTempsDepensesPersonnel__c</field>
            <operation>equals</operation>
            <value>Jours</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_option1__c</fullName>
        <label>Total mises à disposition option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option1__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mises à disposition</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_option2__c</fullName>
        <label>Total mises à disposition option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option2__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mises à disposition</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_option3__c</fullName>
        <label>Total mises à disposition option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_RD_retenu_option3__c</summarizedField>
        <summaryFilterItems>
            <field>INNOdepensePersonnel__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mises à disposition</value>
        </summaryFilterItems>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_miseDisposition_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_miseDisposition__c,1,Total_miseDisposition_option1__c,2,Total_miseDisposition_option2__c,3,Total_miseDisposition_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total mises à disposition option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_option1__c</fullName>
        <label>Total normalisations option 1</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_normalisation_retenu_option1__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_option2__c</fullName>
        <label>Total normalisations option 2</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_normalisation_retenu_option2__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_option3__c</fullName>
        <label>Total normalisations option 3</label>
        <summarizedField>INNOdepensePersonnel__c.Montant_normalisation_retenu_option3__c</summarizedField>
        <summaryForeignKey>INNOdepensePersonnel__c.Valorisation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_normalisation_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_normalisation__c,1,Total_normalisation_option1__c,2,Total_normalisation_option2__c,3,Total_normalisation_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total normalisations option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_option1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total prestataires agréés option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_option2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total prestataires agréés option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_option3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total prestataires agréés option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_agree_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_prestataire_agree__c,1,Total_prestataire_agree_option1__c,2,Total_prestataire_agree_option2__c,3,Total_prestataire_agree_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total presta. agréés option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_option1__c</fullName>
        <formula>MIN(Total_prestataire_agree_option1__c + Total_prestataire_public_option1__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_option2__c</fullName>
        <formula>MIN(Total_prestataire_agree_option2__c + Total_prestataire_public_option2__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_option3__c</fullName>
        <formula>MIN(Total_prestataire_agree_option3__c + Total_prestataire_public_option3__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_optionFinale__c</fullName>
        <formula>MIN(Total_prestataire_agree_optionFinale__c + Total_prestataire_public_optionFinale__c, 12000000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total prestataires option retenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_option1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total prestataires publics option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_option2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total prestataires publics option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_option3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total prestataires publics option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_prestataire_public_optionFinale__c</fullName>
        <formula>CASE(Option_retenue_prestataire_public__c,1,Total_prestataire_public_option1__c,2,Total_prestataire_public_option2__c,3,Total_prestataire_public_option3__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total presta. publics option retenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>